yahooqt: updated YahooConnection to work with JSON data downloads, no crumb needed apparently